Improved file management

--- a/analysis/test_ga.ipynb
+++ b/analysis/test_ga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [],
@@ -148,11 +148,100 @@
    "execution_count": null,
    "id": "ffa7733e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[ 10  11  13  15  17  20  23  27  31  36  42  49  56  65  76  87 101 117\n",
+      " 135 156 181 209 242 280 323 374 432 500]\n",
+      "[np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, np.int64(10), np.int64(11), np.int64(13), np.int64(15), np.int64(17), np.int64(20), np.int64(23), np.int64(27), np.int64(31), np.int64(36), np.int64(42), np.int64(49), np.int64(56), np.int64(65), np.int64(76), np.int64(87), np.int64(101), np.int64(117), np.int64(135), np.int64(156), np.int64(181), np.int64(209), np.int64(242), np.int64(280), np.int64(323), np.int64(374), np.int64(432), np.int64(500)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:60: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  x0 = from_dlpack(x0.toDlpack())\n",
+      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:92: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0: Best costs = [[0.339005, 1.958348]]\n"
+     ]
+    }
+   ],
    "source": [
     "%%pyinstrument\n",
     "kgs.profiling=True\n",
     "# %matplotlib widget\n",
+    "kgs.enable_module_profiling(kgs)\n",
     "import pack_ga3\n",
     "import pack_runner\n",
     "fastMode = False\n",
@@ -160,6 +249,8 @@
     "\n",
     "runner = pack_ga3.baseline()\n",
     "runner.ga.ga_base.N_trees_to_do = 156\n",
+    "ga.legalize=False\n",
+    "ga.ga_base.legalize=False\n",
     "runner.n_generations = 3\n",
     "runner.diagnostic_plot = False\n",
     "runner.seed = 0\n",
