--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -24,21 +24,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.826 ms\n",
+      "ptxas info    : Compile time = 15.969 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 824.450 ms\n",
+      "ptxas info    : Compile time = 821.683 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 548.742 ms\n",
+      "ptxas info    : Compile time = 539.624 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -57,21 +57,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 15.568 ms\n",
+      "ptxas info    : Compile time = 15.255 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 832.901 ms\n",
+      "ptxas info    : Compile time = 828.565 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 117.135 ms\n",
+      "ptxas info    : Compile time = 118.843 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -90,21 +90,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.770 ms\n",
+      "ptxas info    : Compile time = 15.068 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 827.669 ms\n",
+      "ptxas info    : Compile time = 801.722 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 91 registers, used 1 barriers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 118.673 ms\n",
+      "ptxas info    : Compile time = 119.145 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -394,7 +394,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x71eb428800c0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x70944f56c240>\n",
       "All tests passed.\n"
      ]
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
