--- a/analysis/test_genetic_diversity2.ipynb
+++ b/analysis/test_genetic_diversity2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4fafd9f1",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
+      "WARNING: CUDA MPS not active\n",
       "local\n",
       "WARNING: CUDA MPS not active\n"
      ]
@@ -50,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a9b1d89c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x75f1377bdd30>"
+       "<matplotlib.colorbar.Colorbar at 0x74615f29dd30>"
       ]
      },
      "execution_count": 3,
@@ -87,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "841e1c19",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x75f125174050>"
+       "<matplotlib.colorbar.Colorbar at 0x74614c668050>"
       ]
      },
      "execution_count": 4,
@@ -138,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x75f13fd63ed0>"
+       "<matplotlib.colorbar.Colorbar at 0x74616793bed0>"
       ]
      },
      "execution_count": 5,
