--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -24,21 +24,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 27.382 ms\n",
+      "ptxas info    : Compile time = 15.158 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 820.715 ms\n",
+      "ptxas info    : Compile time = 941.108 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 522.911 ms\n",
+      "ptxas info    : Compile time = 594.954 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -57,21 +57,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 18.818 ms\n",
+      "ptxas info    : Compile time = 14.630 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 841.951 ms\n",
+      "ptxas info    : Compile time = 904.789 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 112.315 ms\n",
+      "ptxas info    : Compile time = 120.832 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -90,21 +90,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.551 ms\n",
+      "ptxas info    : Compile time = 14.505 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 788.266 ms\n",
+      "ptxas info    : Compile time = 868.913 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 91 registers, used 1 barriers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 115.125 ms\n",
+      "ptxas info    : Compile time = 119.362 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -128,11 +128,7 @@
       "  Num registers: 38\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 88\n",
-      "[36 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 56 57 58 60 61\n",
-      " 63 64 66 67 69 71 72 74 76 78 80]\n",
-      "[np.int64(36), np.int64(37), np.int64(38), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(43), np.int64(44), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(54), np.int64(56), np.int64(57), np.int64(58), np.int64(60), np.int64(61), np.int64(63), np.int64(64), np.int64(66), np.int64(67), np.int64(69), np.int64(71), np.int64(72), np.int64(74), np.int64(76), np.int64(78), np.int64(80)]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, np.int64(36), np.int64(37), np.int64(38), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(43), np.int64(44), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(54), np.int64(56), np.int64(57), np.int64(58), np.int64(60), np.int64(61), np.int64(63), np.int64(64), np.int64(66), np.int64(67), np.int64(69), np.int64(71), np.int64(72), np.int64(74), np.int64(76), np.int64(78), np.int64(80)]\n"
+      "  Local memory (bytes): 88\n"
      ]
     },
     {
@@ -154,10 +150,6 @@
       "Generation 2: Best costs = [[0.386849, 0.008866]]\n",
       "Generation 3: Best costs = [[0.386849, 0.005784]]\n",
       "Generation 4: Best costs = [[0.386849, 0.003789]]\n",
-      "[36 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 56 57 58 60 61\n",
-      " 63 64 66 67 69 71 72 74 76 78 80]\n",
-      "[np.int64(36), np.int64(37), np.int64(38), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(43), np.int64(44), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(54), np.int64(56), np.int64(57), np.int64(58), np.int64(60), np.int64(61), np.int64(63), np.int64(64), np.int64(66), np.int64(67), np.int64(69), np.int64(71), np.int64(72), np.int64(74), np.int64(76), np.int64(78), np.int64(80)]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, np.int64(36), np.int64(37), np.int64(38), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(43), np.int64(44), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(54), np.int64(56), np.int64(57), np.int64(58), np.int64(60), np.int64(61), np.int64(63), np.int64(64), np.int64(66), np.int64(67), np.int64(69), np.int64(71), np.int64(72), np.int64(74), np.int64(76), np.int64(78), np.int64(80)]\n",
       "Generation 0: Best costs = [[0.386849, 0.033446]]\n",
       "Generation 1: Best costs = [[0.386849, 0.013054]]\n",
       "Generation 2: Best costs = [[0.386849, 0.008866]]\n",
@@ -394,7 +386,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x70a603138340>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x724449d5d7c0>\n",
       "All tests passed.\n"
      ]
     }
